Testit 5/10 toimii, ohjelma toimii